--- a/app/src/main/res/layout/activity_clear_danger.xml
+++ b/app/src/main/res/layout/activity_clear_danger.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ClearDanger">
+    tools:context=".games.ClearDanger">
 
     <androidx.gridlayout.widget.GridLayout
         android:layout_width="match_parent"
