--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".Lobby">
+    tools:context=".activities.Lobby">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
