--- a/app/src/main/res/layout/activity_measure_voice.xml
+++ b/app/src/main/res/layout/activity_measure_voice.xml
@@ -4,48 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".games.MeasureVoice">
+    tools:context=".games.MeasureVoice" >
 
     <LinearLayout
-        android:layout_width="404dp"
-        android:layout_height="731dp"
-        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="-2dp"
-        tools:ignore="MissingConstraints">
-
-        <Button
-            android:id="@+id/btn_record"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onButtonClicked"
-            android:tag = "rec"
-            android:text="Record" />
-
-        <Button
-            android:id="@+id/btn_stop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onButtonClicked"
-            android:tag = "stop"
-            android:text="Stop" />
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
+            android:id="@+id/txt"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sound Level:" />
-
-        <EditText
-            android:id="@+id/txt_sound_level"
-            android:layout_width="match_parent"
-            android:layout_height="67dp"
-            android:ems="10"
-            android:enabled="false"
-            android:hint="Sound Level"
-            android:inputType="textPersonName" />
-
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Scream!"
+            android:textColor="@android:color/background_dark"
+            android:textSize="30sp"
+            android:textStyle="bold" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
