--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="background">#264653</color>
+    <color name="background">#0b0a14</color>
     <color name="main_text">#FFFFFF</color>
     <color name="secondary_text">#E76F51</color>
-    <color name="secondary_colour">#2A9D8F</color>
+    <color name="secondary_colour">#000000</color>
 </resources>
