Added animation and finished home screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,12 @@
     <Button
         android:id="@+id/menu_host"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="fill_parent"
+        android:layout_width="1046dp"
         android:layout_height="200dp"
-        android:textColor="@color/main_text"
+        android:background="@color/secondary_colour"
+        android:rotation="-10"
         android:text="@string/menu_host"
+        android:textColor="@color/main_text"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/menu_join"
         app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
@@ -23,12 +25,14 @@
     <Button
         android:id="@+id/menu_join"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="fill_parent"
+        android:layout_width="1000dp"
         android:layout_height="200dp"
-        android:textSize="36sp"
         android:layout_marginTop="48dp"
-        android:textColor="@color/main_text"
+        android:background="@color/third_colour"
+        android:rotation="-10"
         android:text="@string/menu_join"
+        android:textColor="@color/main_text"
+        android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/guidelineBot"
         app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
         app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
@@ -63,10 +67,11 @@
         app:layout_constraintGuide_percent="0.25" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/gameTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
+        android:tint="@color/title_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
