--- a/app/src/main/res/layout/activity_name_dialog.xml
+++ b/app/src/main/res/layout/activity_name_dialog.xml
@@ -23,7 +23,10 @@
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginBottom="4dp"
-            android:hint="@string/name" />
+            android:hint="@string/name"
+            android:textColorHint="@color/main_text"
+            android:textColor="@color/main_text"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
