[FIX] Added unregister to facedirection and instruction, reset the launcher to main on manifest, commented out measurevoice from list of games

--- a/app/src/main/res/layout/activity_face_direction.xml
+++ b/app/src/main/res/layout/activity_face_direction.xml
@@ -38,4 +38,15 @@
         android:text="Not Facing Any Direction"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <TextView
+        android:id="@+id/txt_instruction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="116dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintVertical_bias="0.546" />
 </androidx.constraintlayout.widget.ConstraintLayout>
