--- a/app/src/main/res/layout/activity_measure_voice.xml
+++ b/app/src/main/res/layout/activity_measure_voice.xml
@@ -7,23 +7,18 @@
     android:background="@color/background"
     tools:context=".games.MeasureVoice" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <TextView
+        android:id="@+id/txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal"
+        android:text="Scream!"
+        android:textAlignment="center"
+        android:textColor="@color/main_text"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Scream!"
-            android:textColor="@android:color/background_dark"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
