Changed word colour UI

--- a/app/src/main/res/layout/activity_word_color_v1.xml
+++ b/app/src/main/res/layout/activity_word_color_v1.xml
@@ -23,8 +23,8 @@
             android:layout_marginTop="250dp"
             android:text="Choose the color of the word"
             android:textAlignment="center"
-            android:textColor="@color/design_default_color_on_secondary"
-            android:textSize="30sp" />
+            android:textColor="@color/main_text"
+            android:textSize="30dp" />
 
         <TextView
             android:id="@+id/word"
@@ -33,7 +33,7 @@
             android:text="Red"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="30sp" />
+            android:textSize="30dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
