--- a/app/src/main/res/layout/activity_face_direction.xml
+++ b/app/src/main/res/layout/activity_face_direction.xml
@@ -9,29 +9,20 @@
 
     <!--Button
         android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="40dp"
         android:onClick="ResetButton"
-        android:layout_width="10000dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="64dp"
-        android:background="@color/secondary_colour"
-        android:rotation="-10"
-        android:textColor="@color/main_text"
-        android:textSize="36sp"
         android:text="RESET"
-<<<<<<< HEAD
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-=======
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" /-->
->>>>>>> master
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="184dp"
         android:layout_height="250dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="64dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -41,12 +32,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:text="Not Facing Any Direction"
-        app:layout_constraintEnd_toEndOf="parent"
         android:textAlignment="center"
         android:textColor="@color/main_text"
+        android:textColorHint="@color/main_text"
         android:textSize="30dp"
+        android:text="Not Facing Any Direction"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -54,10 +46,13 @@
         android:id="@+id/txt_instruction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="116dp"
         android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="@color/main_text"
+        android:textColorHint="@color/main_text"
+        android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        app:layout_constraintVertical_bias="0.546" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
