--- a/app/src/main/res/layout/activity_join_game.xml
+++ b/app/src/main/res/layout/activity_join_game.xml
@@ -4,51 +4,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".activities.JoinGame">
 
     <EditText
         android:id="@+id/edt_room"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
         android:layout_marginTop="28dp"
-        android:ems="10"
-        android:hint="Enter Room Code"
+        android:hint="@string/enter_room_number"
         android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textColor="@color/main_text"
+        android:textColorHint="@color/main_text"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_nickname" />
 
     <Button
         android:id="@+id/btn_scanQR"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="40dp"
-        android:text="Scan QR Code"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_room" />
+        android:layout_width="10000dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="64dp"
+        android:background="@color/secondary_colour"
+        android:rotation="-10"
+        android:text="@string/scan_QR"
+        android:textColor="@color/main_text"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_joinRoom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="40dp"
-        android:text="JOIN ROOM"
-        app:layout_constraintStart_toEndOf="@+id/txt_nickname"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="10000dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="64dp"
+        android:background="@color/third_colour"
+        android:rotation="-10"
+        android:text="@string/join_game"
+        android:textColor="@color/main_text"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_scanQR"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/txt_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:hint="Nickname"
+        android:layout_marginTop="44dp"
+        android:hint="@string/name"
         android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textColor="@color/main_text"
+        android:textColorHint="@color/main_text"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gameTitle" />
 
-        app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/gameTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:tint="@color/title_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_letsparty" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
