--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#073b4c</color>
+    <color name="colorPrimaryDark">#073b4c</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="background">#073b4c</color>
+    <color name="main_text">#FFFFFF</color>
+    <color name="title_text">#ffd166</color>
+    <color name="secondary_text">#E76F51</color>
+    <color name="secondary_colour">#ef476f</color>
+    <color name="third_colour">#06d6a0</color>
 </resources>
